@@ -177,6 +177,15 @@ Rename:
   Catalog:  portal_catalog
   Indexing: /plone/Members/test_user_1_/new_doc11 []
   ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/sub ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_doc2 ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_doc11 ['getObjPositionInParent']
+  ------------------------------------------------------------
 
 Copy and paste:
 
@@ -305,6 +314,18 @@ Rename:
   ------------------------------------------------------------
   Catalog:  portal_catalog
   Indexing: /plone/Members/test_user_1_/new_folder11 []
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/sub ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_doc2 ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_folder2 ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_folder11 ['getObjPositionInParent']
   ------------------------------------------------------------
 
 Copy and paste:
@@ -437,6 +458,21 @@ Rename:
   ------------------------------------------------------------
   Catalog:  portal_catalog
   Indexing: /plone/Members/test_user_1_/new_btree_folder11 []
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/sub ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_doc2 ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_folder2 ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_btree_folder2 ['getObjPositionInParent']
+  ------------------------------------------------------------
+  Catalog:  portal_catalog
+  Indexing: /plone/Members/test_user_1_/new_btree_folder11 ['getObjPositionInParent']
   ------------------------------------------------------------
 
 Copy and paste:
