@@ -1,6 +1,10 @@
 2.0 unreleased
 ==============
 
+- Moved a manage_renameObject method from the autosort code into the ordered
+  base class. It wasn't quite obvious, but the code was actually used.
+  [hannosch]
+
 - Removed icalendar package from the thirdparty folder. We don't use it
   ourselves and it's easy installable nowadays for anyone who wants it.
   [hannosch]
